# hs-arena

./: AI.hs  Animation.hs  ChipsetViewer.hs  Collission.hs  Graphics.hs  Hero.hs  Highscore.hs  Main.hs  Makefile  MapLoader.hs  Math.hs  Monster.hs  Movemap.hs  Object.hs  README.md  Rendering.hs  SDLChipsetViewerWrapper.hs  Search.hs  Sound.hs  TODO  TestSearch.hs  Tile.hs  Types.hs  arena.cabal  chipset_wrapper.c  fight.cabal  fight.prof  highscores.txt  wrapper.c
images/: battle-arena.psd  foe.pxi  map.tmx  minish_chip_forest_01.col  unbenannt.tmx
